--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -16,7 +16,7 @@ Chacun de ces tickets peut être assigné à un sprint.
 \subsection{Sprint}
 Un sprint est un ensemble de ticket à résoudre pour une date donnée. En général, la durée d'un sprint était de 2 semaines, parfois une. A chaque fin de sprint, une réunion était organisée pour discuter des résultats, des reports à effectuer ou des tickets à créer.
 \section{Gestionnaire de version}
-Tout projet informatique se doit d'être sous gestionnaire de version. Sans compter le fait que le projet soit open-source et actif provoquait des changements importants dans le code. Il fallait donc pouvoir travailler en parallèle des changement opérés par les contributeurs et pouvoir appliquer facilement nos modifications le jour venu.
+Tout projet informatique se doit d'être sous gestionnaire de version. Sans compter le fait que le projet soit open-source et actif provoquait des changements importants dans le code. Il fallait donc pouvoir travailler en parallèle des changements opérés par les contributeurs et pouvoir appliquer facilement nos modifications le jour venu.
 
 Le dépôt de référence d'IzPack est un dépôt Subversion. Les contributeurs appliquent leurs modifications sur ce dépôt. Cependant, pour des raisons de facilité et pour ne pas perturber le développement, il a été décidé de travailler sur un fork Git.
 \subsection{Git}
@@ -25,9 +25,9 @@ Il s'agit, à l'instar de BitKeeper, d'un système distribué. Toutes les copies
 Chaque personne travaille donc sur son propre dépôt et se synchronise par rapport à d'autres dépôts. C'est de cet aspect distribué que provient une grande partie de la puissance de Git.
 Un utilisateur a accès à l'historique entier une fois qu'il a cloné le dépôt. Il peut effectuer toutes les operations voulues sur son dépôt en étant déconnecté et chaque clone est une sauvegarde intégrale du dépôt.
 Ainsi, n'importe quel developpeur a acces a toutes les fonctionnalites d'un gestionnaire de version meme s'il n'est pas connecte au depot central.
-La communication entre depot Git se fait soit par le protocole ssh, https, ftp, rsync ou par le protocole git.
+La communication entre depots Git se fait soit par le protocole ssh, https, ftp, rsync ou par le protocole git.
 
-Git se demarque également  sur des fonctionnalités évoluées. L'un de ses principaux points forts est la gestion des branches. La création, suppression et fusion des branches est remarquable de simplicité et d'efficacité.
+Git se demarque également sur des fonctionnalités évoluées. L'un de ses principaux points forts est la gestion des branches. La création, suppression et fusion des branches est remarquable de simplicité et d'efficacité.
 La taille d'un dépôt Git est faible comparée à celle d'autres gestionnaires comme subversion.
 
 Julien Ponge entretient un dépôt Git synchronisé par rapport au Subversion. Nous avons travaillé sur un fork de ce dépôt.
