--- a/latex/remerciement.tex
+++ b/latex/remerciement.tex
@@ -1,1 +1,2 @@
-Avec un repo public (et bien reference en plus), j'hesite a mettre les traditionnels remerciements delirants d'avant release...
+ %Avec un repo public (et bien reference en plus), j'hesite a mettre les traditionnels remerciements delirants d'avant release...
+Nous tenons a remercier Julien Ponge pour son encadrement de qualite tout au long du projet et pour le temps qu'il nous a consacre. Nous remercions egalement les createurs de NanoXml, projet qui a accompagne IzPack pendant de nombreuses annees. Enfin, nous remercions la fantastique communaute qui s'est construite autour d'IzPack et ses utilisateurs, sans qui ce projet ne serait sans doute pas ce qu'il est aujourd'hui.
