--- a/latex/master.tex
+++ b/latex/master.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{report}
+\documentclass[a4paper,13pt]{report}
 \usepackage[utf-8]{inputenc}
 \usepackage{graphicx}
 \usepackage{latexsym,a4,epsfig,times}
@@ -9,7 +9,8 @@
 \usepackage{listings}
 \usepackage{color}
 \usepackage{float}
-\usepackage[top=45mm, bottom=45mm, left=15mm, right=15mm]{geometry}
+\usepackage[top=30mm, bottom=20mm, left=15mm, right=15mm]{geometry}
+% \usepackage[top=45mm, bottom=45mm, left=15mm, right=15mm]{geometry}
 \usepackage{fancyhdr}
 \usepackage{pdfpages}
 \usepackage{bibtopic}
@@ -41,7 +42,8 @@ urlcolor = black,
 breaklinks=false,
 pdfpagemode= UseOutlines,
 }
-\setlength{\textheight}{200mm}
+\setlength{\textheight}{220mm}
+% \setlength{\textheight}{200mm}
 \setlength{\headheight}{14pt}
 \fancypagestyle{plain}{
 \fancyhf[]{}
