Ajout du tuteur...

--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -5,14 +5,16 @@
 \textsc{\begin{LARGE}Refactoring IzPack\end{LARGE}}\\[1cm]
 \end{center}
 \vfill
-\begin{minipage}{0.4\textwidth}
+\begin{minipage}{0.5\textwidth}
 \begin{flushleft} \large
 \emph{Auteurs:}Anthonin \textsc{Bonnefoy}\\
 ~~~~~~~~~~~~~~~David \textsc{Duponchel}\\
 \end{flushleft}
 \end{minipage}
-\begin{minipage}{0.4\textwidth}
+\begin{minipage}{0.5\textwidth}
 \begin{flushright}
+\large
+\emph{Encadree par:}Julien \textsc{Ponge}\\
 {\today}
 \end{flushright}
 \end{minipage}\\[1cm]
