Image lighthouse et corrections

--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -1,12 +1,15 @@
+Pour diriger et faciliter l'evolution du projet, un certains nombres d'outils et de methodes ont ete mis en place au debut du projet. L'environnement avait pour but de permettre un developpement agile. On peut distinguer 3 parties, la gestion du projet, la gestion des sources et les outils de developpements.
 \section{Planification et gestion de projet}
+La methode agile preconise des iterations courtes avec des objectifs clairs et conscits a realiser a chaque iteration. A chaque iteration, un point etait fait avec le client pour definir les objectifs pour la prochaine iteration, le client ici etant notre tuteur, Julien Ponge. L'outil pour gerer les objectifs et les iterations est LightHouse.
 \subsection{Lighthouse}
-Lighthouse est un gestionnaire de projet en ligne. Il permet d'assigner des tâches, de les répartir et de les gérer.
-Cette application web a ete utilise pour notre projet.
-
-On peut distinguer deux entités principales, les tickets et les sprints.
-% Need schema pour le workflow lighthouse
+Lighthouse est un gestionnaire de projet en ligne. Il se presente sous la forme d'une apllication web et propose toutes les fonctionnalitees necessaires a la gestions des objectifs. On peut distinguer deux entités principales, les tickets et les sprints.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\textwidth]{../image/lighthouse.png}
+	\caption{Page d'accueil de Lighthouse}
+\end{figure}
 \subsection{Ticket}
-Les Tickets représentent une tâche à réaliser. Ils peuvent être crées par n'importe quel participant au projet. Ce ticket peut ensuite être assigner à une personne et possède plusieurs états.
+Les Tickets représentent un objectif à réaliser. Ils peuvent être crées par n'importe quel participant au projet. Ce ticket peut ensuite être assigner à une personne et possède plusieurs états.
 \begin{description}
 \item[Nouveau] Le ticket vient d'être crée. Il peut être assigné (et le doit pour être traité).
 \item[Ouvert] Le ticket commence a être traité.
