--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -75,10 +75,9 @@ Il existe aussi des panels plus spécialisés. Ainsi, CompilePanel permet de com
 
  %---------------------------------------------------------
 \section{Exemples d'installation}
-De nombreux exemples complexes existent, par exemple l'installeur de IzPack, celui de Glassfish, etc. Pour illustrer simplement l'utilisation de IzPack, utilisons plutôt le petit exemple fourni avec le code de l'application.
+De nombreux exemples complets existent, par exemple l'installeur de IzPack, celui de Glassfish, etc. Pour illustrer simplement l'utilisation de IzPack, utilisons plutôt le petit exemple fourni avec le code de l'application.
 
 \subsection{Description du xml}
-
 % un peu porc comme méthode, copier/coller une partie du xml...
 % mais je ne vois pas comment présenter ce xml
 % et puis ça suffira, au moins pour un premier jet
@@ -163,7 +162,6 @@ Il suffit désormais de lancer le jar pour installer notre application.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=15cm]{../image/installSample.png}
-	% installSample.png: 652x275 pixel, 72dpi, 23.00x9.70 cm, bb=0 0 652 275
 	\caption{Exemple d'installation avec IzPack}
 \end{figure}
 
@@ -185,10 +183,12 @@ $ java -jar install.jar automated.xml
  %---------------------------------------------------------
 \section{Problèmes actuels}
 IzPack possède, comme tout logiciel, des bugs potentiels ou des améliorations à effectuer.
-Heureusement, sa licence open-source permet à tout développeur d'apporter ses contributions.
-
+\subsection{Code obsolete}
+Izpack a debute en 2001. A cette epoque, la Jdk en etait a la version 1.3. Il y avait donc des fonctionnalitees absentes a cette epoques comme la genericite. On trouve ainsi du code comportant des tableaux d'objets ou des Vectors.
 \subsection{Nanoxml}
 Une amélioration possible concerne la gestion des fichiers XML, qui ont une grande importance dans IzPack.
-Pour lire/écrire des fichiers XML, IzPack se base sur une librairie, nanoXML. Cette librairie n'est malheureusement plus mise à jour (la dernière mise à jour date de 2003) et possède encore quelques bugs.
+
+L'abscence de processeur XML integre a la JRE 1.3 a force l'utilisation d'une librairie externe pour traiter les XML. IzPack se base donc sur nanoXML, une librairie Xml, choisie en raison de sa faible taille.
+Cette librairie n'est malheureusement plus mise à jour (la dernière mise à jour date de 2003) et possède encore quelques bugs.
 De plus, les versions récentes de l'environnement java (JRE) possèdent de base tout ce qu'il faut pour gérer le xml.
-Se débarasser de la dépendance à nanoXML et se reposer uniquement sur la JRE permet donc non seulement de rendre la gestion des XML plus sûre et robuste, mais également de diminuer la taille de l'installeur généré.
+Se débarasser de la dépendance à nanoXML et se reposer uniquement sur la JRE permet donc non seulement de rendre la gestion des XML plus sûre et robuste, mais également de diminuer la taille des installeurs générés.
