--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -14,7 +14,7 @@
 \begin{minipage}{0.5\textwidth}
 \begin{flushright}
 \large
-\emph{Encadree par:}Julien \textsc{Ponge}\\
+\emph{Encadres par:}Julien \textsc{Ponge}\\
 {\today}
 \end{flushright}
 \end{minipage}\\[1cm]
